# dics_meal-backend

./: build.sh  db.sqlite3  pyproject.toml  render.yaml
meal/: views.py
meal_upload/: settings.py  urls.py
