[tool.poetry]
name = "dics-meal-backend"
version = "0.1.0"
description = ""
authors = ["daveg7lee <daveg7lee@gmail.com>"]
readme = "README.md"
packages = [{include = "dics_meal_backend"}]

[tool.poetry.dependencies]
python = "^3.10"
django = "^4.2.3"
djangorestframework = "^3.14.0"
gunicorn = "^20.1.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
