[tool.poetry]
name = "dics-meal-backend"
version = "0.1.0"
description = ""
authors = ["daveg7lee <daveg7lee@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.9"
django = "^4.2.3"
djangorestframework = "^3.14.0"
gunicorn = "^20.1.0"
dj-database-url = "^2.1.0"
psycopg2-binary = "^2.9.7"
whitenoise = {extras = ["brotli"], version = "^6.5.0"}
django-cors-headers = "^4.2.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
